Add Code Comment Implement Delete function

--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/User/Index.cshtml
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/User/Index.cshtml
@@ -65,8 +65,7 @@
             @Html.DisplayFor(modelItem => item.SecAns)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new {  id=item.UserID }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Edit", "Edit", new {  id=item.UserID })
         </td>
     </tr>
 }
