--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/User/Edit.cshtml
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/User/Edit.cshtml
@@ -78,7 +78,9 @@
             </div>
             <div class="form-group">
                 <div class="col-xs-push-3 col-xs-9">
+                    <input type="hidden" name="hfAction" id="hfAction" value="Save" />
                     <input type="submit" value="Save" class="btn btn-primary" />
+                    <button type="button" id="btnDelete" value="Delete" class="btn btn-danger">Delete</button>
                     @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-default" })
                 </div>
             </div>
@@ -88,4 +90,13 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+
+    <script>
+        $(function () {
+            $("#btnDelete").click(function () {
+                $("#hfAction").val("Delete");
+                $("form").submit();
+            })
+        })
+    </script>
 }
