Credit task 4.4 along with all submitted assigned up to CT 4.4 Using angular js for AJAX request

--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/Shared/_Layout.cshtml
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/Shared/_Layout.cshtml
@@ -7,7 +7,9 @@
     <meta name="description" content="">
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/angular/css")
     @Scripts.Render("~/bundles/modernizr")
+
     <!-- Latest compiled and minified CSS -->
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 
