--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/User/ResetPassword.cshtml
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/User/ResetPassword.cshtml
@@ -1,41 +1,57 @@
 ﻿@model SwinSchool.WebUI.Models.ResetPasswordRequestViewModel
-
 @{
     ViewBag.Title = "Reset Password for "+Model.Name;
 }
-<div class="container">
+<div class="container" ng-app="app">
     <h2>Reset password</h2>
     <hr />
 
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true)
-
+    <div ng-controller="accCtrl as vm">
         <div class="form form-horizontal">
-            @Html.HiddenFor(model => model.UserID)
-            @Html.HiddenFor(model => model.SecQn)
-            @Html.HiddenFor(model => model.Name)
-
-            <div class="form-group">
-                
-            </div>
             <div class="form-group">
                 <div class="input-group">
-                    <span class="input-group-addon">@Html.DisplayTextFor(model => model.SecQn)</span>
-                    @Html.TextBoxFor(model => model.SecAns, new { @class = "form-control" })
+                    <span class="input-group-addon" ng-bind="vm.model.SecQn"></span>
+                    <input type="text" class="form-control" ng-model="vm.model.SecAns" />
                 </div>
-                
-                @Html.ValidationMessageFor(model => model.SecAns)
+
+                <div class="error" ng-bind="vm.errorMessage" ng-show="vm.errorMessage"></div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Reset password" class="btn btn-primary" />
+                <button class="btn btn-primary" ng-click="vm.resetPassword()">Reset password</button>
                 @Html.ActionLink("Back to user detail", "Edit", new { id = Model.UserID }, new { @class = "btn btn-default" })
             </div>
         </div>
-    }
+    </div>
 
     @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/angular/angular.min.js"></script>
+    <script src="~/Scripts/angular/angular-sanitize.min.js"></script>
+        <script>
+            angular.module('app', [])
+            .controller('accCtrl', ['$http', '$location', function ($http, $location) {
+                var vm = this;
+
+                vm.model = {
+                    UserID: '@Model.UserID',
+                    Name: '@Model.Name',
+                    SecQn: '@Model.SecQn',
+                    SecAns: ''
+                };
+                vm.errorMessage = false;
+
+                vm.resetPassword = function () {
+                    vm.errorMessage = false;
+
+                    // using $http service to create a ajax POST request
+                    $http.post('/api/UserApi/ResetPassword', vm.model)
+                    .then(function (success) {
+                        // navigate to success page
+                        window.location.href = '@Url.Action("ResetPasswordSuccess")';
+                    }, function (error) {
+                        vm.errorMessage = error.data.Message;
+                    });
+                };
+            }])
+        </script>
     }
 </div>
