--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/User/ResetPasswordSuccess.cshtml
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/User/ResetPasswordSuccess.cshtml
@@ -6,6 +6,7 @@
     <h2>Password reset</h2>
     <hr />
 
-    Your password has been reset successfully. Please click 
-    @Html.ActionLink("here", "Index", null, new { }) to return to the user list
+    Your password has been reset successfully.
+    An email has been sent to you with the new password. Please click 
+    @Html.ActionLink("here", "Index", null, new { }) to return to the user list.
 </div>
