--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Shared/_Layout.cshtml
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Shared/_Layout.cshtml
@@ -3,9 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Staff Allocate Plus</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/sass/bundles.css" rel="stylesheet" />
+    <link href="~/Scripts/lib/angular/angular-csp.css" rel="stylesheet" />
+    <link href="~/Scripts/lib/angular-bootstrap/ui-bootstrap-csp.css" rel="stylesheet" />
+    <link href="~/Scripts/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -20,6 +24,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
@@ -27,16 +32,24 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container-fluid body-content">
         @RenderBody()
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
+    <script src="~/Scripts/lib/angular/angular.min.js"></script>
+    <script src="~/Scripts/lib/angular-route/angular-route.min.js"></script>
+    <script src="~/Scripts/lib/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="~/Scripts/lib/moment/min/moment.min.js"></script>
+    <script src="~/Scripts/lib/pace/pace.min.js"></script>
+    <script src="~/Scripts/lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
