--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/Admin/Index.cshtml
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/Admin/Index.cshtml
@@ -5,10 +5,11 @@
 }
 
 <h2>User list</h2>
-
-<p>
-    @Html.ActionLink("Create New User", "Create") | 
-    @Html.ActionLink("Cart", "Index", "Cart")
+<hr />
+<p class="clearfix">
+    
+    @Html.ActionLink("Create New User", "Create",null, new { @class="btn btn-default"})
+    
 </p>
 <table class="table table-responsive">
     <tr>
@@ -19,9 +20,6 @@
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Password)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
         <th>
@@ -29,12 +27,6 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Address)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SecQn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SecAns)
         </th>
         <th></th>
     </tr>
@@ -48,9 +40,6 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Password)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Email)
         </td>
         <td>
@@ -58,12 +47,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SecQn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SecAns)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new {  id=item.UserID })
