--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/Shared/_Layout.cshtml
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/Shared/_Layout.cshtml
@@ -18,6 +18,60 @@
     
 </head>
 <body>
+
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="@Url.Action("Index","Home")">
+                    SECURE
+                </a>
+            </div>
+
+            <ul class="nav navbar-nav">
+                @{
+                    if (User != null && User.IsInRole("Administrator"))
+                    {
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User administrator <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="@Url.Action("Index","Admin")">User listing</a></li>
+                                <li><a href="@Url.Action("Create","Admin")">Create user</a></li>
+                            </ul>
+                        </li>
+                    }
+                    if (User != null && User.IsInRole("Employee|Administrator"))
+                    {
+                        <li><a href="@Url.Action("Index","Employee")">User profile</a></li>
+                    }
+                    if (User == null)
+                    {
+                        <li><a href="@Url.Action("Login","Account")">Login</a></li>
+                    }
+                }
+
+                
+            </ul>
+
+            @{ 
+                if (User != null && User is SwinSchool.WebUI.Security.UserPrincipal)
+                {
+                    <p class="navbar-text">
+                        Your are in role: @(((SwinSchool.WebUI.Security.UserPrincipal)User).SerializedData.Role)
+                    </p>
+                }
+            }
+
+            @{
+                if (User != null && User.Identity.IsAuthenticated)
+                {
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="@Url.Action("Logout", "Account")">Logout</a></li>
+                    </ul>
+                }
+            }
+        </div>
+    </nav>
+
     <div class="container">
         @RenderBody()
     </div>
