--- a/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/Account/Login.cshtml
+++ b/dev/SwinSchool/SwinSchool/SwinSchool.WebUI/Views/Account/Login.cshtml
@@ -7,6 +7,7 @@
 <hr />
 @using (Html.BeginForm())
 {
+    @Html.ValidationSummary()
     <div class="form form-horizontal">
         <div class="form-group">
             @Html.LabelFor(model => model.UserName, new { @class = "control-label col-xs-3" })
