--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Job/Index.cshtml
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Job/Index.cshtml
@@ -11,16 +11,14 @@
 </div>
 
 @section scripts {
-
-    <script>
-        var resourceUrl = {
-
-        }
-    </script>
-
     <script src="~/AppJs/helpers/ajax-helper.js"></script>
 
     <script src="~/AppJs/jobApp.js"></script>
+
+    <script src="~/AppJs/services/userService.js"></script>
+    <script src="~/AppJs/services/jobService.js"></script>
+    <script src="~/AppJs/services/staffService.js"></script>
+
     <script src="~/AppJs/controllers/jobDetailCtrl.js"></script>
     <script src="~/AppJs/controllers/jobListCtrl.js"></script>
 }
