--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/sass/_table.scss
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/sass/_table.scss
@@ -48,6 +48,10 @@ table.wn-table {
                 visibility:visible;
             }
         }
+
+        > tr.selected > td {
+            background: $wnTableSelectedRowColor;
+        }
     }
 
     &.table-clickable {
