--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/sass/_variables.scss
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/sass/_variables.scss
@@ -12,5 +12,6 @@ $wnTableHeaderBorderStyle : 1px solid #ccc;
 $wnTableRowBorderStyle : 1px solid #eee;
 $wnTableCellPadding : 8px;
 $wnTableHighlightRowColor : #eee;
+$wnTableSelectedRowColor: #fffac0;
 
 $color-block-width: 5px;
