--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Shared/_Layout.cshtml
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Shared/_Layout.cshtml
@@ -11,7 +11,6 @@
     <link href="~/Scripts/lib/angular-bootstrap/ui-bootstrap-csp.css" rel="stylesheet" />
     <link href="~/Scripts/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Scripts/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="~/Scripts/lib/ngDatepicker/src/css/ngDatepicker.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -57,7 +56,8 @@
     <script src="~/Scripts/lib/moment/min/moment.min.js"></script>
     <script src="~/Scripts/lib/pace/pace.min.js"></script>
     <script src="~/Scripts/lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script src="~/Scripts/lib/ngDatepicker/src/js/ngDatepicker.min.js"></script>
+    <script src="~/Scripts/lib/angular-strap/dist/angular-strap.min.js"></script>
+    <script src="~/Scripts/lib/angular-strap/dist/angular-strap.tpl.min.js"></script>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
@@ -70,8 +70,6 @@
         staffApi: '/api/Staff'
     }
     </script>
-
-
 
     @RenderSection("scripts", required: false)
 </body>
